# Stakan

./: .clang-format  .gitignore  CMakeLists.txt  Interface.cpp  README.md  conanfile.txt  main.cpp  vcpkg.json
CGUI/: CMakeLists.txt  graphicalui.cpp  graphicalui.h  main.cpp  mainwindow.ui  ui_mainwindow.h
bid_ask_book/: CMakeLists.txt
bid_ask_book/src/: bid_ask_book.cpp  bid_ask_book.h  logger.cpp  tests.cpp
bid_ask_snaphot_interface/: CMakeLists.txt  bid_ask_interface.h  serialization.cpp  serialization.h  tests.cpp
client_lib/: CMakeLists.txt  client_lib_interface.hpp  design.md  order_book_client.cpp  order_book_client.hpp
console/: CMakeLists.txt  app.cpp  app.h  app.hpp  cli.cpp  cli.hpp  main.cpp  menu.cpp  menu.h  menu.hpp  menu_action.cpp  menu_action.h  snapshot_adapter.h  snapshot_client.cpp  snapshot_client.h
console/build_console/: Makefile  cui
db_bid_ask/: bid_ask_schema.md
db_comp/: CMakeLists.txt  postgresql.cpp  sqlite.cpp
db_comp/include/: mongodb_connector.hpp
db_comp/mongodb.cpp/: CMakeLists.txt
db_comp/mongodb.cpp/include/: mongodb_connector.hpp
db_comp/mongodb.cpp/src/: compile_test.cpp  mongodb_connector.cpp  smoke_main.cpp
db_comp/src/: compile_test.cpp  mongodb_connector.cpp  smoke_main.cpp
db_server_events/: readme.md  server_event_schema.md
include/: CMakeLists.txt  session.h  tcpserver.h
include/tcp_client/: CMakeLists.txt  client.hpp  protocol.hpp  types.hpp
serialization/: CMakeLists.txt  serialization.cpp  serialization.h
snapshots_broadcaster/: CMakeLists.txt  broadcaster.h  broadcaster_design.md  command_queue.h  dom_manager.cpp  dom_manager.h  main.cpp  order_book_snapshot_source.cpp  snapshot.h  snapshot_source.cpp  snapshot_source.h
src/: CMakeLists.txt  bid_ask_book.cpp  bid_ask_book.h  bid_ask_interface.h  client.cpp  main.cpp  protocol.cpp  session.cpp  tcpserver.cpp  tests.cpp
src/CGUI/: CMakeLists.txt  graphicalui.cpp  graphicalui.h  main.cpp  mainwindow.ui  ui_mainwindow.h
src/TCP_client/: client.cpp  main.cpp  protocol.cpp
src/TCP_server/: CMakeLists.txt  main.cpp  session.cpp  session.h  tcpserver.cpp  tcpserver.h
src/TCP_server/include/: session.h  tcpserver.h
src/TCP_server/src/: session.cpp  tcpserver.cpp
src/bid_ask_book/: CMakeLists.txt  bid_ask_book.cpp  bid_ask_book.h  logger.h  tests.cpp
src/bid_ask_snaphot_interface/: CMakeLists.txt  bid_ask_interface.h
src/client_list/: CMakeLists.txt  client_list.cpp  client_list.h  client_order_manager.cpp  client_order_manager.h  client_session_manager.cpp  client_session_manager.h
src/console/: CMakeLists.txt  app.cpp  menu.cpp  menu_action.cpp  snapshot_client.cpp
src/database/: CMakeLists.txt  IDBConnector.h  PostgresConnector.cpp  PostgresConnector.h
src/snapshots_broadcaster/: CMakeLists.txt  broadcaster.h  command_queue.h  dom_manager.cpp  dom_manager.h  main.cpp  order_book_snapshot_source.cpp  order_book_snapshot_source.h  snapshot_source.cpp  snapshot_source.h
tcp_client/: CMakeLists.txt
